# ctre-rs

./: .travis.yml  Cargo.toml  LICENSE-MIT  README.md  build.rs  canifier_wrapper.hpp  mot_wrapper.hpp  wrapper.hpp
ctre/: Cargo.toml  README.md
ctre-data/: Cargo.toml  README.md
ctre-data/examples/: test-debug.rs
ctre-data/src/: lib.rs  macros.rs  motion.rs
ctre-data/src/canifier/: api.rs  cci.rs  config.rs  mod.rs
ctre-data/src/mot/: api.rs  cci.rs  config.rs  mod.rs
ctre-data/src/pigeon/: api.rs  mod.rs
ctre-sys/: .gitignore  Cargo.toml  README.md  build.rs
ctre-sys/src/: buff_traj.rs  canifier.rs  enums.rs  lib.rs  logger.rs  macros.rs  mot.rs  pigeon.rs  platform.rs  platform_can.rs  unmanaged.rs
ctre/examples/: motion_magic.rs  simple_robot.rs  simple_trait_obj.rs
ctre/src/: canifier.rs  lib.rs  macros.rs  motion.rs  motor_control.rs
ctre/src/sensors/: pigeon.rs
examples/: motion_magic.rs  simple_robot.rs  simple_trait_obj.rs  test_robot.rs
src/: canifier.rs  lib.rs  macros.rs  mot.rs  motion.rs  motor_control.rs  pigeon.rs
src/ctre/: bindings.rs  canifier.rs  mod.rs  motion.rs  motor_control.rs  sensors.rs
src/ctre/sensors/: pigeon.rs
src/ctre_sys/: canifier.rs  mod.rs  mot.rs  pigeon.rs
src/sensors/: mod.rs  pigeon.rs
