[package]
name = "ctre-data"
version = "0.5.15"
edition = "2018"

authors = ["David Vo <david@vovo.id.au>"]
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["frc", "ctre"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/auscompgeek/ctre-rs"
description = "Enums and structs for CTR Electronics' Phoenix libraries"

[package.metadata.docs.rs]
features = ["serde", "num"]

[dependencies]
miniserde = { version = "0.1", optional = true }
num-derive = { version = "0.2", optional = true }
num-traits = { version = "0.2", optional = true, default-features = false }
smart-default = "0.2"

[dependencies.serde]
version = "1.0"
optional = true
default-features = false
features = ["derive"]

[features]
num = ["num-derive", "num-traits"]
