[package]
name = "ctre-sys"
version = "5.4.0"
authors = ["David Vo <david@vovo.id.au>"]
links = "CTRE_PhoenixCCI"
build = "build.rs"
repository = "https://github.com/auscompgeek/ctre-rs"
readme = "README.md"
license-file = "LICENSE"
keywords = ["frc", "ctre"]
categories = ["external-ffi-bindings", "embedded", "hardware-support"]
description = "FFI bindings to CTR Electronics' Phoenix FRC libraries"

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }
