[package]
name = "ctre-sys"
version = "5.5.0"
authors = ["David Vo <david@vovo.id.au>"]
links = "CTRE_PhoenixCCI"
build = "build.rs"
repository = "https://github.com/auscompgeek/ctre-rs"
readme = "README.md"
license-file = "LICENSE"
keywords = ["frc", "ctre"]
categories = ["external-ffi-bindings", "embedded", "hardware-support"]
description = "FFI bindings to CTR Electronics' Phoenix FRC libraries"

include = ["src/**/*", "Cargo.toml", "build.rs", "lib/**/*"]

[dependencies]
