[package]
name = "ctre-sys"
version = "5.14.0"
authors = ["David Vo <david@vovo.id.au>"]
categories = ["external-ffi-bindings", "embedded", "hardware-support"]
keywords = ["frc", "ctre"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/auscompgeek/ctre-rs"

build = "build.rs"
links = "CTRE_PhoenixCCI"

description = "FFI bindings to CTR Electronics' Phoenix FRC libraries"

include = ["src/**/*", "Cargo.toml", "build.rs", "lib/**/*"]

[dependencies]
