[package]
name = "ctre"
version = "0.8.0"
edition = "2018"

authors = ["David Vo <david@vovo.id.au>"]
categories = ["api-bindings", "embedded", "hardware-support"]
keywords = ["frc", "ctre"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/auscompgeek/ctre-rs"
description = "Bindings for CTR Electronics' Phoenix for FRC libraries"

[features]
serde = ["ctre-data/serde"]

[dependencies]
bitflags = "1.0"
ctre-data = { path = "../ctre-data", version = "0.5.14", features = ["num"] }
ctre-sys = { path = "../ctre-sys", version = "5.15.0" }
memoffset = "0.5.5"
num-traits = "0.2"

[dev-dependencies]
#wpilib = { path = "../../first-rust-competition/wpilib" }
